<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondPage">

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/SecondPageTitle"
        android:textAlignment="center"
        android:textSize="@dimen/TitleTextSize"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/titlesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitleText"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NameTitle"
            android:layout_weight="1"
            android:textSize="@dimen/StandardTextSize"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddCostTitle"
            android:layout_weight="1"
            android:textSize="@dimen/StandardTextSize"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CostTitle"
            android:layout_weight="1"
            android:textSize="@dimen/StandardTextSize"
            android:gravity="center"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nameCostRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"

        app:layout_constraintBottom_toTopOf="@+id/NextPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlesLayout"

        tools:listitem="@layout/name_cost" />

    <Button
        android:id="@+id/NextPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NextPage"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>